package(default_visibility = ["//visibility:public"])

load("@bazel_gazelle//:def.bzl", "gazelle")

licenses(["notice"])  # Apache 2.0

# gazelle:exclude third_party

gazelle(
    name = "gazelle",
    prefix = "clusterfuzz",
)

py_library(
    name = "clusterfuzz",
    srcs_version = "PY2ONLY",
    deps = [
        "//python/base",
        "//python/config",
        "//python/crash_analysis",
        "//python/metrics",
        "//python/system",
    ],
)
