package(default_visibility = ["//visibility:public"])

load("@bazel_gazelle//:def.bzl", "gazelle")

licenses(["notice"])  # Apache 2.0

# gazelle:exclude third_party
# gazelle:exclude appengine/third_party

gazelle(
    name = "gazelle",
    prefix = "clusterfuzz",
)

# TODO(ochang): Support Python 3 (https://github.com/google/clusterfuzz/issues/183).
py_library(
    name = "clusterfuzz",
    srcs_version = "PY2ONLY",
    deps = [
        "//python/base",
        "//python/config",
        "//python/crash_analysis",
        "//python/metrics",
        "//python/system",
    ],
)
