[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "casp"
# This is a placeholder version. The actual version is set
# in publish-cli-to-pypi.yaml and publish-cli-to-testpypi.yaml
# If you want to manually publish the CLI, you need to manually
# set the version here.
version = "0.0.8" 
authors = [
  { name="PauloVLB", email="paulovlb@google.com" },
]
description = "A new, modern Command-Line Interface (CLI) for ClusterFuzz."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "docker",
    "google",
    "google-auth"
]

[project.urls]
"Homepage" = "https://github.com/google/clusterfuzz/"

[project.scripts]
casp = "casp.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
