load("@io_bazel_rules_go//go:def.bzl", "go_path")

py_binary(
    name = "create_gopath",
    srcs = ["create_gopath.py"],
    args = [
        "$(location :gopath)",
    ],
    data = [
        ":gopath",
    ],
)

# Create a GOPATH for App Engine deployment.
go_path(
    name = "gopath",
    deps = [
        "//go/server",
    ],
)
