load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "clusterfuzz/go/server",
    visibility = ["//visibility:private"],
    deps = [
        "//go/base/buckets:go_default_library",
        "//go/cloud/db:go_default_library",
        "//go/cloud/gcs:go_default_library",
        "//go/server/appengine:go_default_library",
        "//go/server/cron:go_default_library",
        "@org_golang_x_sys//unix:go_default_library",  # keep
    ],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
