load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["worker.go"],
    importpath = "clusterfuzz/go/untrusted_runner",
    visibility = ["//visibility:private"],
    deps = [
        "//go/base/logs:go_default_library",
        "//go/bots:go_default_library",
        "//go/cloud/stackdriver:go_default_library",
        "//go/untrusted_runner/worker:go_default_library",
        "//protos:untrusted_runner_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)

go_binary(
    name = "worker",
    embed = [":go_default_library"],
    importpath = "clusterfuzz/go/untrusted_runner/worker",
    visibility = ["//visibility:public"],
)
