package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

py_library(
    name = "base",
    srcs = [
        "__init__.py",
        "dates.py",
        "errors.py",
        "external_users.py",
        "json_utils.py",
        "memoize.py",
        "modules.py",
        "persistent_cache.py",
        "retry.py",
        "tasks.py",
        "untrusted.py",
        "utils.py",
    ],
    srcs_version = "PY2ONLY",
    deps = [],
)
