package(default_visibility = ["//visibility:public"])

py_library(
    name = "crash_analysis",
    deps = [],
    srcs = [
        "__init__.py",
        "crash_comparer.py",
        "severity_analyzer.py",
        "crash_result.py",
        "crash_analyzer.py",
        "stack_parsing/stack_analyzer.py",
        "stack_parsing/stack_parser.py",
        "stack_parsing/stack_symbolizer.py",
    ],
    srcs_version = "PY2ONLY",
)


