package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

py_library(
    name = "metrics",
    srcs = [
        "__init__.py",
        "crash_stats.py",
        "fuzzer_logs.py",
        "fuzzer_stats.py",
        "logs.py",
        "monitor.py",
        "monitoring_metrics.py",
        "profiler.py",
    ],
    srcs_version = "PY2ONLY",
    deps = [],
)
