package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

py_library(
    name = "system",
    srcs = [
        "__init__.py",
        "archive.py",
        "environment.py",
        "minijail.py",
        "new_process.py",
        "process_handler.py",
        "shell.py",
    ],
    srcs_version = "PY2ONLY",
    deps = [],
)
