load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "clusterfuzz/go/base/config",
    visibility = ["//visibility:public"],
    deps = [
        "//go/base/environ:go_default_library",
        "//go/base/fs:go_default_library",
        "//go/base/logs:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["config_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//go/base/environ:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
