load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["fs.go"],
    importpath = "clusterfuzz/go/base/fs",
    visibility = ["//visibility:public"],
    deps = ["@com_github_pkg_errors//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["fs_test.go"],
    embed = [":go_default_library"],
    importpath = "clusterfuzz/go/base/fs",
)
