load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["process.go"],
    importpath = "clusterfuzz/go/base/process",
    visibility = ["//visibility:public"],
    deps = [
        "//go/base/logs:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_shirou_gopsutil//process:go_default_library",
    ],
)
