load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "errors.go",
        "query.go",
        "testcases.go",
    ],
    importpath = "clusterfuzz/go/cloud/db",
    visibility = ["//visibility:public"],
    deps = [
        "//go/base/logs:go_default_library",
        "//go/cloud:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_google_cloud_go//datastore:go_default_library",
        "@org_golang_google_api//iterator:go_default_library",
    ],
)
