load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["gcs.go"],
    importpath = "clusterfuzz/go/cloud/gcs",
    visibility = ["//visibility:public"],
    deps = [
        "//go/base/buckets:go_default_library",
        "//go/base/logs:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
        "@org_golang_google_api//iterator:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["gcs_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//go/base/buckets:go_default_library",
        "//go/testing/config:go_default_library",
    ],
)
