load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "certs.go",
        "coverage.go",
    ],
    importpath = "clusterfuzz/go/server/cron",
    visibility = ["//visibility:public"],
    deps = [
        "//go/base/buckets:go_default_library",
        "//go/base/config:go_default_library",
        "//go/base/logs:go_default_library",
        "//go/cloud:go_default_library",
        "//go/cloud/db:go_default_library",
        "//go/cloud/db/types:go_default_library",
        "//go/cloud/gcs:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_google_cloud_go//datastore:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "certs_test.go",
        "coverage_test.go",
        "cron_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/base/buckets:go_default_library",
        "//go/cloud/db:go_default_library",
        "//go/cloud/db/types:go_default_library",
        "//go/cloud/gcs:go_default_library",
        "//go/testing/config:go_default_library",
        "//go/testing/emulators:go_default_library",
        "@com_google_cloud_go//datastore:go_default_library",
    ],
)
