load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["gcs.go"],
    importpath = "clusterfuzz/go/testing/gcs",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "gcs",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
